Reorganizing the career stuff into its own collection. Had to do some custom layout coding. We'll see if this works.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 {%- comment -%}
   Include vars:
   section_items
+  link_items
 {%- endcomment -%}
 
 <!-- Nav -->
@@ -49,6 +50,33 @@
           {%- assign _class = 'icon' -%}
         {%- endif -%}
         <li><a href="#{{- _slug -}}" id="{{- _slug -}}-link" class="scrolly"><span class="{{ _class }} {{ _icon }}">{{- _title -}}</span></a></li>
+      {%- endfor -%}
+    {%- endunless -%}
+    {%- assign _links = include.link_items | where_exp: "section", "section.hide != true" -%}
+    {%- if _pages[0] and _links[0] -%}<hr>{%- endif -%}
+    {%- unless _links == null -%}
+      {%- for _page in _links -%}
+        {%- assign _title = _page.title | default: _page.layout | default: 'Untitled' -%}
+        {%- assign _slug = _title | slugify -%}
+        {%- assign _icon = _page.icon | default: 'fa-file' -%}
+        {%- if _page.icon-style == 'regular' -%}
+          {%- assign _class = 'icon-r' -%}
+        {%- elsif _page.icon-style == 'brands' -%}
+          {%- assign _class = 'icon-b' -%}
+        {%- else -%}
+          {%- assign _class = 'icon' -%}
+        {%- endif -%}
+        {%- if _page.url == page.url -%}
+        <li><a href="#" id="{{- _slug -}}" class="active">
+          <span class="{{ _class }} {{ _icon }}">{{- _title -}}</span>
+        </a></li>
+        {%- elsif _page.url -%}
+        <li><a href="{{- _page.url | absolute_url -}}" id="{{- _slug -}}-link">
+          <span class="{{ _class }} {{ _icon }}">{{- _title -}}</span>
+        </a></li>
+        {%- else -%}
+        <li><a href="{{- '/' | absolute_url -}}" id="broken-link"><span class="icon fa-unlink">[broken link]</span></a></li>
+        {%- endif -%}
       {%- endfor -%}
     {%- endunless -%}
   </ul>
