--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,14 @@
 {%- comment -%}
   Include vars:
   scrolly_nav
+  link_nav
 {%- endcomment -%}
 
 <!-- Header -->
 <div id="header">
   <div class="top">
     {%- include logo.html -%}
-    {%- include nav.html section_items=include.scrolly_nav -%}
+    {%- include nav.html section_items=include.scrolly_nav link_items=include.link_nav -%}
   </div>
   <div class="bottom">
     {%- include social_icons.html -%}
