A few edits, and added a redirect for broken links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,6 +11,9 @@
     {%- unless _pages == null -%}
       {%- assign _pages = _pages | sort: 'order' -%}
       {%- for _page in _pages -%}
+        {% if _page.title == redirect %}
+        {% continue %}
+        {% endif %}
         {%- assign _title = _page.title | default: _page.layout -%}
         {%- assign _slug = _title | slugify -%}
         {%- assign _icon = _page.icon | default: 'fa-link' -%}
