--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -65,7 +65,7 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
+		color: #222;
 
 		&.is-loading * {
 			@include vendor('transition', 'none !important');
@@ -78,12 +78,12 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
-		color: #888;
+		color: #222;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
 		font-weight: 300;
-		color: #666;
+		color: #222;
 		line-height: 1.5em;
 	}
 
@@ -92,7 +92,7 @@
 		text-decoration: none;
 
 		strong {
-			color: #333;
+			color: #222;
 		}
 	}
 
@@ -119,7 +119,7 @@
 
 	strong, b {
 		font-weight: 300;
-		color: #666;
+		color: #222;
 	}
 
 	em, i {
@@ -129,7 +129,7 @@
 	a {
 		text-decoration: none;
 		color: inherit;
-		border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
+		border-bottom: groove 1px rgba(128, 128, 128, 0.5);
 		@include vendor('transition', ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
 		outline: 0;
 
@@ -193,7 +193,7 @@
 	dl {
 		dt {
 			font-weight: 300;
-			color: #666;
+			color: #222;
 		}
 		dd {
 			margin-left: 1em
