--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,15 +5,77 @@ layout: default
 
 <!-- Main -->
 <div id="main">
-	<!-- Post -->
-	<article class="shade-two">
-	  <div class="container">
-			<header>
-				<h2>{{- page.title -}}</h2>
-				<h3>{{- page.subtitle -}}</h3>
-				<p>{% if page.author %}{{ page.author }}, {% endif %}{{- page.date | date_to_long_string -}}</p>
-			</header>
-	    {{- content -}}
-	  </div>
-	</article>
+    <!-- Post -->
+    <article class="shade-two">
+        <div class="container">
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <!-- Post Share -->
+                        <div class="col-md-2 pl-0">
+                        </div>
+                        <div class="col-md-9 flex-first flex-md-unordered">
+                            <div class="mainheading">
+                                <!-- Author Box -->
+                                {% if page.author %}
+                                <div class="row post-top-meta">
+                                    <div class="col-xs-12 col-md-3 col-lg-2 text-center text-md-left mb-4 mb-md-0">
+                                        {% if author.avatar %}
+                                        <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                                        {% else %}
+                                        <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                                        {% endif %}
+                                    </div>
+                                    <div class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left">
+                                        <a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
+                                        <span class="author-description">{{ author.description }}</span>
+                                    </div>
+                                </div>
+                                {% endif %}
+
+                                <!-- Post Title -->
+                                <h1 class="posttitle">{{ page.title }}</h1>
+                                <h2>{{- page.subtitle -}}</h2>
+                                <p>{% if page.author %}{{ page.author }}, {% endif %}{{- page.date | date_to_long_string -}}</p>
+                            </div>
+                            <!-- Post Featured Image -->
+                            {% if page.image %}
+
+                            {% if site.lazyimages == "enabled" %}
+                            <img class="featured-image img-fluid lazyimg"
+                                 src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
+                                 data-src="{% if page.image contains " ://" %}{{ page.image }}{% else %}{{ site.baseurl
+                            }}/{{
+                            page.image }}{% endif %}" alt="{{ page.title }}">
+                            {% else %}
+                            <img class="featured-image img-fluid" src="{% if page.image contains " ://" %}{{ page.image
+                            }}{%
+                            else
+                            %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+                            {% endif %}
+
+                            {% endif %}
+                            <!-- End Featured Image -->
+
+                            <!-- Post Content -->
+                            <div class="article-post">
+                                <!-- Toc if any -->
+                                {% if page.toc %}
+                                {% if page.beforetoc %}
+                                <p><em>{{page.beforetoc}}</em></p>
+                                {% endif %}
+                                <div class="toc mt-4 mb-4 lead">
+                                    <h3 class="font-weight-bold">Summary</h3>
+                                    {% include toc.html html=content %}
+                                </div>
+                                {% endif %}
+                                <!-- End Toc -->
+                                {{content}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
 </div>
