--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,8 @@
   <meta property="og:type" content="website" />
   {% if page.image %}
   <meta property="og:image" content="{{- page.image | relative_url -}}" />
+  <meta property="og:image:width" content="150" />
+  <meta property="og:image:height" content="150" />
   {% else %}
   <meta property="og:image" content="{{- site.avatar | relative_url -}}" />
   {% endif %}
