--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,8 @@
   <meta name="author" content="{{- site.author -}}" />
   
   <!-- Open Graph -->
-  <meta property="og:title" content="{{- _page_title -}}" />
+  <!-- deprecated in favor of using the jekyll-seo-tag plugin -->
+<!--  <meta property="og:title" content="{{- _page_title -}}" />
   <meta property="og:type" content="website" />
   {% if page.image %}
   <meta property="og:image" content="{{- page.image | relative_url -}}" />
@@ -29,7 +30,7 @@
   {% endif %}
   <meta property="og:url" content="{{- page.url | relative_url -}}" />
   <meta property="og:site_name" content="{{- site.title | escape -}}" />
-  <meta property="og:description" content="{{- _page_description -}}" />
+  <meta property="og:description" content="{{- _page_description -}}" />-->
   
   <!-- Styles -->
   <meta charset="utf-8" />
