adding webfeedsFeaturedVisual for feedly

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,13 +42,13 @@ layout: default
                             {% if page.image %}
 
                             {% if site.lazyimages == "enabled" %}
-                            <img class="featured-image img-fluid lazyimg"
+                            <img class="featured-image img-fluid lazyimg webfeedsFeaturedVisual"
                                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
                                  data-src="{% if page.image contains " ://" %}{{ page.image }}{% else %}{{ site.baseurl
                             }}/{{
                             page.image }}{% endif %}" alt="{{ page.title }}">
                             {% else %}
-                            <img class="featured-image img-fluid" src="{% if page.image contains " ://" %}{{ page.image
+                            <img class="featured-image img-fluid webfeedsFeaturedVisual" src="{% if page.image contains " ://" %}{{ page.image
                             }}{%
                             else
                             %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
