reverting failed image tweaks, and switching to excerpt only for feed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
   {% seo %}
+  {% feed_meta %}
   <!-- Robots -->
   <meta name="robots" content="{{- page.robots | default: 'index, follow' -}}" />
   {%- unless page.canonical == false -%}<link rel="canonical" href="{{- page.url | relative_url -}}" />{%- endunless -%}
