--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,27 +37,28 @@ layout: default
                                 <h1 class="posttitle">{{ page.title }}</h1>
                                 <h2>{{- page.subtitle -}}</h2>
                                 <p>{% if page.author %}{{ page.author }}, {% endif %}{{- page.date | date_to_long_string -}}</p>
-                            </div><!-- Post Content -->
+                            </div>
+                            <!-- Post Featured Image -->
+                            {% if page.image %}
+
+                            {% if site.lazyimages == "enabled" %}
+                            <img class="featured-image img-fluid lazyimg"
+                                 src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
+                                 data-src="{% if page.image contains " ://" %}{{ page.image }}{% else %}{{ site.baseurl
+                            }}/{{
+                            page.image }}{% endif %}" alt="{{ page.title }}">
+                            {% else %}
+                            <img class="featured-image img-fluid" src="{% if page.image contains " ://" %}{{ page.image
+                            }}{%
+                            else
+                            %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
+                            {% endif %}
+
+                            {% endif %}
+                            <!-- End Featured Image -->
+
+                            <!-- Post Content -->
                             <div class="article-post">
-                                <!-- Post Featured Image -->
-                                {% if page.image %}
-
-                                {% if site.lazyimages == "enabled" %}
-                                <img class="featured-image img-fluid lazyimg webfeedsFeaturedVisual"
-                                     src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAACCAQAAAA3fa6RAAAADklEQVR42mNkAANGCAUAACMAA2w/AMgAAAAASUVORK5CYII="
-                                     data-src="{% if page.image contains " ://" %}{{ page.image }}{% else %}{{ site.baseurl
-                                }}/{{
-                                page.image }}{% endif %}" alt="{{ page.title }}">
-                                {% else %}
-                                <img class="featured-image img-fluid webfeedsFeaturedVisual" src="{% if page.image contains " ://" %}{{ page.image
-                                }}{%
-                                else
-                                %}{{ site.baseurl }}/{{ page.image }}{% endif %}" alt="{{ page.title }}">
-                                {% endif %}
-
-                                {% endif %}
-                                <!-- End Featured Image -->
-
                                 <!-- Toc if any -->
                                 {% if page.toc %}
                                 {% if page.beforetoc %}
